<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_firebase_proxy"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.epfl.sweng.project.Activities.FirebaseProxyActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/remote_opponent"
        android:layout_below="@+id/local_user"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp"
        android:hint="Remote Opponent"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/local_user"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="Local User"/>

    <Button
        android:text="Ready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:id="@+id/local_user_ready"
        android:layout_alignBaseline="@+id/local_user"
        android:layout_alignBottom="@+id/local_user"
        android:layout_toRightOf="@+id/local_user"
        android:layout_toEndOf="@+id/local_user"/>

    <Button
        android:text="Not Ready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/remote_opponent_ready"
        android:layout_alignBaseline="@+id/remote_opponent"
        android:layout_alignBottom="@+id/remote_opponent"
        android:layout_alignLeft="@+id/local_user_ready"
        android:layout_alignStart="@+id/local_user_ready"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/checkpoint_latitude"
        android:layout_alignRight="@+id/checkpoint_latitude"
        android:layout_alignEnd="@+id/checkpoint_latitude"
        android:id="@+id/checkpoint_longitude"
        android:hint="Longitude"/>

    <Button
        android:text="Put"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:id="@+id/put_checkpoint_btn"
        android:layout_alignBottom="@+id/checkpoint_longitude"
        android:layout_alignLeft="@+id/remote_opponent_ready"
        android:layout_alignStart="@+id/remote_opponent_ready"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/checkpoint_longitude"
        android:layout_alignRight="@+id/put_checkpoint_btn"
        android:layout_alignEnd="@+id/put_checkpoint_btn"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="54dp">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:id="@+id/data_list"/>
    </RelativeLayout>

    <TextView
        android:text="Status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkpoint_longitude"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="18dp"
        android:id="@+id/status_txt"/>

    <TextView
        android:text="Not started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/challenge_status_txt"
        android:layout_alignBaseline="@+id/status_txt"
        android:layout_alignBottom="@+id/status_txt"
        android:layout_toLeftOf="@+id/put_checkpoint_btn"
        android:layout_toStartOf="@+id/put_checkpoint_btn"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="60dp"
        android:id="@+id/checkpoint_latitude"
        android:hint="Latitude"
        android:layout_below="@+id/remote_opponent_ready"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:text="Set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/set_challenge"
        android:layout_below="@+id/remote_opponent_ready"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:text="Reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/set_challenge"
        android:layout_toRightOf="@+id/set_challenge"
        android:layout_toEndOf="@+id/set_challenge"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:id="@+id/reset_btn"/>

</RelativeLayout>
