...
        android:id="@+id/mapView" />

    <Button
        android:text="@string/stop"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:id="@+id/stop_run"
        android:layout_gravity="bottom|center_horizontal"
        android:textColor="#111e06"
        android:background="@drawable/button_shape_green"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
...
        android:layout_marginBottom="20dp"
        android:layout_width="150dp"/>

    <Button
        android:text="@string/start"
        android:layout_height="wrap_content"
        android:id="@+id/start_run"
        android:layout_gravity="bottom|center_horizontal"
        android:textColor="#111e06"
        android:background="@drawable/button_shape_green"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
...
